assignment1/src/main/zcode/parser/.antlr/ZCodeParser.py
# Generated from d://STUDY//UNIVERSITY//HK232//NGUYEN LY NGON NGU LAP TRINH//ASS1//assignment1//src//main//zcode//parser//ZCode.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'true'", "'false'", "'number'", 
                     "'bool'", "'string'", "'return'", "'var'", "'dynamic'", 
                     "'func'", "'for'", "'until'", "'by'", "'break'", "'continue'", 
                     "'if'", "'else'", "'elif'", "'begin'", "'end'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'not'", "'and'", "'or'", 
                     "'='", "'<-'", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'...'", "'=='", "'('", "')'", "'['", "']'", "','", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'\\n'", "<INVALID>", 
                     "<INVALID>", "'\\r'" ]

    symbolicNames = [ "<INVALID>", "BOOL_LIT", "TRUE", "FALSE", "NUMBER", 
                      "BOOL", "STRING", "RETURN", "VAR", "DYNAMIC", "FUNC", 
                      "FOR", "UNTIL", "BY", "BREAK", "CONTINUE", "IF", "ELSE", 
                      "ELIF", "BEGIN", "END", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "NOT", "AND", "OR", "EQUAL", "ASSIGN", "DIFF", 
                      "LT", "LTE", "GT", "GTE", "CONCAT", "COMPARE", "LP", 
                      "RP", "LSB", "RSB", "COMMA", "ID", "NUMBER_LIT", "STR_LIT", 
                      "NEWLINE", "COMMENTS", "WS", "CR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_list_declared = 1
    RULE_declared = 2
    RULE_variables = 3
    RULE_implicit_var = 4
    RULE_name_of_type = 5
    RULE_name_of_type_noass = 6
    RULE_name_of_type_ass = 7
    RULE_list_size = 8
    RULE_implicit_dynamic = 9
    RULE_implicit_dynamic_noass = 10
    RULE_implicit_dynamic_ass = 11
    RULE_function = 12
    RULE_func_paralist = 13
    RULE_exp = 14
    RULE_exp0 = 15
    RULE_exp1 = 16
    RULE_exp2 = 17
    RULE_exp3 = 18
    RULE_exp4 = 19
    RULE_exp5 = 20
    RULE_exp6 = 21
    RULE_index_operators = 22
    RULE_operand = 23
    RULE_literal = 24
    RULE_arr_lit = 25
    RULE_list_exp = 26
    RULE_func_call = 27
    RULE_stmt = 28
    RULE_var_dec_stmt = 29
    RULE_assign_stmt = 30
    RULE_lhs = 31
    RULE_index_exp = 32
    RULE_if_stmt = 33
    RULE_ifstmt = 34
    RULE_elif_stmtlist = 35
    RULE_elif_stmt = 36
    RULE_elsestmt = 37
    RULE_for_stmt = 38
    RULE_break_stmt = 39
    RULE_continue_stmt = 40
    RULE_return_stmt = 41
    RULE_func_call_stmt = 42
    RULE_block_stmt = 43
    RULE_liststmt = 44
    RULE_some_endl = 45

    ruleNames =  [ "program", "list_declared", "declared", "variables", 
                   "implicit_var", "name_of_type", "name_of_type_noass", 
                   "name_of_type_ass", "list_size", "implicit_dynamic", 
                   "implicit_dynamic_noass", "implicit_dynamic_ass", "function", 
                   "func_paralist", "exp", "exp0", "exp1", "exp2", "exp3", 
                   "exp4", "exp5", "exp6", "index_operators", "operand", 
                   "literal", "arr_lit", "list_exp", "func_call", "stmt", 
                   "var_dec_stmt", "assign_stmt", "lhs", "index_exp", "if_stmt", 
                   "ifstmt", "elif_stmtlist", "elif_stmt", "elsestmt", "for_stmt", 
                   "break_stmt", "continue_stmt", "return_stmt", "func_call_stmt", 
                   "block_stmt", "liststmt", "some_endl" ]

    EOF = Token.EOF
    BOOL_LIT=1
    TRUE=2
    FALSE=3
    NUMBER=4
    BOOL=5
    STRING=6
    RETURN=7
    VAR=8
    DYNAMIC=9
    FUNC=10
    FOR=11
    UNTIL=12
    BY=13
    BREAK=14
    CONTINUE=15
    IF=16
    ELSE=17
    ELIF=18
    BEGIN=19
    END=20
    ADD=21
    SUB=22
    MUL=23
    DIV=24
    MOD=25
    NOT=26
    AND=27
    OR=28
    EQUAL=29
    ASSIGN=30
    DIFF=31
    LT=32
    LTE=33
    GT=34
    GTE=35
    CONCAT=36
    COMPARE=37
    LP=38
    RP=39
    LSB=40
    RSB=41
    COMMA=42
    ID=43
    NUMBER_LIT=44
    STR_LIT=45
    NEWLINE=46
    COMMENTS=47
    WS=48
    CR=49
    UNCLOSE_STRING=50
    ILLEGAL_ESCAPE=51
    ERROR_CHAR=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_declared(self):
            return self.getTypedRuleContext(ZCodeParser.List_declaredContext,0)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ZCodeParser.NEWLINE)
            else:
                return self.getToken(ZCodeParser.NEWLINE, i)

        def getRuleIndex(self):
            return ZCodeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 92
                self.match(ZCodeParser.NEWLINE)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.list_declared()
            self.state = 99
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_declaredContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declared(self):
            return self.getTypedRuleContext(ZCodeParser.DeclaredContext,0)


        def list_declared(self):
            return self.getTypedRuleContext(ZCodeParser.List_declaredContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_list_declared

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_declared" ):
                listener.enterList_declared(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_declared" ):
                listener.exitList_declared(self)




    def list_declared(self):

        localctx = ZCodeParser.List_declaredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_list_declared)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.declared()
                self.state = 102
                self.list_declared()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.declared()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaredContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(ZCodeParser.FunctionContext,0)


        def variables(self):
            return self.getTypedRuleContext(ZCodeParser.VariablesContext,0)


        def some_endl(self):
            return self.getTypedRuleContext(ZCodeParser.Some_endlContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_declared

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclared" ):
                listener.enterDeclared(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclared" ):
                listener.exitDeclared(self)




    def declared(self):

        localctx = ZCodeParser.DeclaredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declared)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.function()
                pass
            elif token in [4, 5, 6, 8, 9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.variables()
                self.state = 109
                self.some_endl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariablesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def implicit_var(self):
            return self.getTypedRuleContext(ZCodeParser.Implicit_varContext,0)


        def name_of_type(self):
            return self.getTypedRuleContext(ZCodeParser.Name_of_typeContext,0)


        def implicit_dynamic(self):
            return self.getTypedRuleContext(ZCodeParser.Implicit_dynamicContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_variables

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariables" ):
                listener.enterVariables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariables" ):
                listener.exitVariables(self)




    def variables(self):

        localctx = ZCodeParser.VariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variables)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.implicit_var()
                pass
            elif token in [4, 5, 6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.name_of_type()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.implicit_dynamic()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Implicit_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(ZCodeParser.VAR, 0)

        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(ZCodeParser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(ZCodeParser.ExpContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_implicit_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImplicit_var" ):
                listener.enterImplicit_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImplicit_var" ):
                listener.exitImplicit_var(self)




    def implicit_var(self):

        localctx = ZCodeParser.Implicit_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_implicit_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(ZCodeParser.VAR)
            self.state = 119
            self.match(ZCodeParser.ID)
            self.state = 120
            self.match(ZCodeParser.ASSIGN)
            self.state = 121
            self.exp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Name_of_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name_of_type_noass(self):
            return self.getTypedRuleContext(ZCodeParser.Name_of_type_noassContext,0)


        def name_of_type_ass(self):
            return self.getTypedRuleContext(ZCodeParser.Name_of_type_assContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_name_of_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName_of_type" ):
                listener.enterName_of_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName_of_type" ):
                listener.exitName_of_type(self)




    def name_of_type(self):

        localctx = ZCodeParser.Name_of_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_name_of_type)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.name_of_type_noass()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.name_of_type_ass()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Name_of_type_noassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def NUMBER(self):
            return self.getToken(ZCodeParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(ZCodeParser.STRING, 0)

        def BOOL(self):
            return self.getToken(ZCodeParser.BOOL, 0)

        def LSB(self):
            return self.getToken(ZCodeParser.LSB, 0)

        def list_size(self):
            return self.getTypedRuleContext(ZCodeParser.List_sizeContext,0)


        def RSB(self):
            return self.getToken(ZCodeParser.RSB, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_name_of_type_noass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName_of_type_noass" ):
                listener.enterName_of_type_noass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName_of_type_noass" ):
                listener.exitName_of_type_noass(self)




    def name_of_type_noass(self):

        localctx = ZCodeParser.Name_of_type_noassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_name_of_type_noass)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 112) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 128
            self.match(ZCodeParser.ID)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 129
                self.match(ZCodeParser.LSB)
                self.state = 130
                self.list_size()
                self.state = 131
                self.match(ZCodeParser.RSB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Name_of_type_assContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(ZCodeParser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(ZCodeParser.ExpContext,0)


        def NUMBER(self):
            return self.getToken(ZCodeParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(ZCodeParser.STRING, 0)

        def BOOL(self):
            return self.getToken(ZCodeParser.BOOL, 0)

        def LSB(self):
            return self.getToken(ZCodeParser.LSB, 0)

        def list_size(self):
            return self.getTypedRuleContext(ZCodeParser.List_sizeContext,0)


        def RSB(self):
            return self.getToken(ZCodeParser.RSB, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_name_of_type_ass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName_of_type_ass" ):
                listener.enterName_of_type_ass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName_of_type_ass" ):
                listener.exitName_of_type_ass(self)




    def name_of_type_ass(self):

        localctx = ZCodeParser.Name_of_type_assContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_name_of_type_ass)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 112) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 136
            self.match(ZCodeParser.ID)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 137
                self.match(ZCodeParser.LSB)
                self.state = 138
                self.list_size()
                self.state = 139
                self.match(ZCodeParser.RSB)


            self.state = 143
            self.match(ZCodeParser.ASSIGN)
            self.state = 144
            self.exp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_sizeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER_LIT(self):
            return self.getToken(ZCodeParser.NUMBER_LIT, 0)

        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def list_size(self):
            return self.getTypedRuleContext(ZCodeParser.List_sizeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_list_size

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_size" ):
                listener.enterList_size(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_size" ):
                listener.exitList_size(self)




    def list_size(self):

        localctx = ZCodeParser.List_sizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_list_size)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(ZCodeParser.NUMBER_LIT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.match(ZCodeParser.NUMBER_LIT)
                self.state = 148
                self.match(ZCodeParser.COMMA)
                self.state = 149
                self.list_size()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Implicit_dynamicContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def implicit_dynamic_ass(self):
            return self.getTypedRuleContext(ZCodeParser.Implicit_dynamic_assContext,0)


        def implicit_dynamic_noass(self):
            return self.getTypedRuleContext(ZCodeParser.Implicit_dynamic_noassContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_implicit_dynamic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImplicit_dynamic" ):
                listener.enterImplicit_dynamic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImplicit_dynamic" ):
                listener.exitImplicit_dynamic(self)




    def implicit_dynamic(self):

        localctx = ZCodeParser.Implicit_dynamicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_implicit_dynamic)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.implicit_dynamic_ass()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.implicit_dynamic_noass()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Implicit_dynamic_noassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DYNAMIC(self):
            return self.getToken(ZCodeParser.DYNAMIC, 0)

        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_implicit_dynamic_noass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImplicit_dynamic_noass" ):
                listener.enterImplicit_dynamic_noass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImplicit_dynamic_noass" ):
                listener.exitImplicit_dynamic_noass(self)




    def implicit_dynamic_noass(self):

        localctx = ZCodeParser.Implicit_dynamic_noassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_implicit_dynamic_noass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(ZCodeParser.DYNAMIC)
            self.state = 157
            self.match(ZCodeParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Implicit_dynamic_assContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DYNAMIC(self):
            return self.getToken(ZCodeParser.DYNAMIC, 0)

        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(ZCodeParser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(ZCodeParser.ExpContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_implicit_dynamic_ass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImplicit_dynamic_ass" ):
                listener.enterImplicit_dynamic_ass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImplicit_dynamic_ass" ):
                listener.exitImplicit_dynamic_ass(self)




    def implicit_dynamic_ass(self):

        localctx = ZCodeParser.Implicit_dynamic_assContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_implicit_dynamic_ass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(ZCodeParser.DYNAMIC)
            self.state = 160
            self.match(ZCodeParser.ID)
            self.state = 161
            self.match(ZCodeParser.ASSIGN)
            self.state = 162
            self.exp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(ZCodeParser.FUNC, 0)

        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def LP(self):
            return self.getToken(ZCodeParser.LP, 0)

        def RP(self):
            return self.getToken(ZCodeParser.RP, 0)

        def return_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Return_stmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(ZCodeParser.Block_stmtContext,0)


        def some_endl(self):
            return self.getTypedRuleContext(ZCodeParser.Some_endlContext,0)


        def func_paralist(self):
            return self.getTypedRuleContext(ZCodeParser.Func_paralistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = ZCodeParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(ZCodeParser.FUNC)
            self.state = 165
            self.match(ZCodeParser.ID)
            self.state = 166
            self.match(ZCodeParser.LP)
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 112) != 0):
                self.state = 167
                self.func_paralist()


            self.state = 170
            self.match(ZCodeParser.RP)
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 171
                    self.some_endl()


                self.state = 174
                self.return_stmt()
                pass
